# mcp_deployment

./: pyproject.toml
src/mcpserver/: main,.py
src/mcpserver/deployment/: mcp.py
