[project]
name = "mcp-deployment"
version = "0.1.0"
description = "Demo MCP server deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
]

[project.scripts]
mcp-server = "mcpserver.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
